--- a/app/src/main/res/layout/locations.xml
+++ b/app/src/main/res/layout/locations.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="4dp"
-    tools:context=".location.LocationView" >
+    tools:context=".location.LocationFragment" >
 
     <ProgressBar
         android:id="@+id/progress_bar"
