--- a/app/src/main/res/layout/navigation.xml
+++ b/app/src/main/res/layout/navigation.xml
@@ -8,6 +8,7 @@
     android:padding="4dp"
     tools:context=".MainActivity" >
 
+    <!-- define host fragment -->
     <fragment
         android:id="@+id/host_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
