--- a/app/src/main/res/layout/location.xml
+++ b/app/src/main/res/layout/location.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="64dp"
-    tools:context=".location.LocationFragment" >
+    tools:context=".ui.LocationFragment" >
 
     <ScrollView
         android:id="@+id/scrollview"
